Fixed bug #39018 (Error control operator '@' fails to suppress "Uninitialized string offset")

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@254563 c90b9560-bf6c-de11-be94-00142212c4b1